--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,40 +4,65 @@ anyio==4.12.1
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.1.8
+dnspython==2.7.0
+email-validator==2.3.0
 exceptiongroup==1.3.1
 fastapi==0.128.0
+fastapi-cli==0.0.21
+fastapi-cloud-cli==0.12.0
+fastar==0.8.0
 filelock==3.19.1
 fsspec==2025.10.0
 h11==0.16.0
 hf-xet==1.2.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
 huggingface_hub==0.36.2
 idna==3.11
 Jinja2==3.1.6
 joblib==1.5.3
+markdown-it-py==3.0.0
 MarkupSafe==3.0.3
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.2
 packaging==26.0
 pillow==11.3.0
 pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic-settings==2.11.0
 pydantic_core==2.41.5
+Pygments==2.19.2
+python-dotenv==1.2.1
+python-multipart==0.0.20
 PyYAML==6.0.3
 regex==2026.1.15
 requests==2.32.5
+rich==14.3.2
+rich-toolkit==0.19.4
+rignore==0.7.6
 safetensors==0.7.0
 scikit-learn==1.6.1
 scipy==1.13.1
 sentence-transformers==5.1.2
+sentry-sdk==2.52.0
+shellingham==1.5.4
 SQLAlchemy==2.0.46
 starlette==0.49.3
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.22.2
+tomli==2.4.0
 torch==2.8.0
 tqdm==4.67.3
 transformers==4.57.6
+typer==0.23.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.39.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
