--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.5
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
@@ -22,6 +23,7 @@ huggingface_hub==0.36.2
 idna==3.11
 Jinja2==3.1.6
 joblib==1.5.3
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
