--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,10 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.1.8
+cryptography==46.0.5
 dnspython==2.7.0
 email-validator==2.3.0
 exceptiongroup==1.3.1
@@ -34,11 +36,13 @@ packaging==26.0
 pillow==11.3.0
 psycopg==3.2.13
 psycopg-binary==3.2.13
+pycparser==2.23
 pydantic==2.12.5
 pydantic-extra-types==2.11.0
 pydantic-settings==2.11.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.11.0
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
